webkit scrollbar fix

--- a/style.css
+++ b/style.css
@@ -27,16 +27,11 @@ body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
 
-#home #about #projects #blog #contact {
-  width: 100vw;
-}
 
 .container {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  scroll-snap-type: y mandatory;
   overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
 
 .v-slider-bloc {
@@ -44,8 +39,12 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   padding: 2rem;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 .v-slider-bloc:nth-child(odd) {
